# cookiecutter-php-yii2

./: README.md  cookiecutter.json  pyproject.toml
tests/: test_bake_template.py
{{cookiecutter.project_slug}}/: .env.template  README.md  composer.json  docker-compose.yml
{{cookiecutter.project_slug}}/.github/workflows/: ubuntu-jammy.yml
{{cookiecutter.project_slug}}/config/: console.php  db.php  main.php  web.php
{{cookiecutter.project_slug}}/public/: index.php
{{cookiecutter.project_slug}}/src/controllers/: SiteController.php
